[gd_scene format=3 uid="uid://bw4n48fdwcy3y"]

[ext_resource type="Shader" uid="uid://dsvqa3bpw1r5c" path="res://addons/whitecell/scripts/shaders/error.gdshader" id="1_y8mem"]
[ext_resource type="Script" uid="uid://bij1j4xgx0c8x" path="res://addons/whitecell/scripts/ui/error.gd" id="2_6at25"]
[ext_resource type="FontFile" uid="uid://but47y6v5ypuf" path="res://addons/whitecell/sprites/fonts/chakra_petch/chakra_petch_regular.ttf" id="2_ajmke"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xtnc3"]
shader = ExtResource("1_y8mem")
shader_parameter/rwidth = 3.0
shader_parameter/rheight = 2.0

[node name="error" type="ColorRect" unique_id=1560723769]
material = SubResource("ShaderMaterial_xtnc3")
custom_minimum_size = Vector2(300, 64)
color = Color(0, 0, 0, 1)
script = ExtResource("2_6at25")

[node name="label_rich" type="RichTextLabel" parent="." unique_id=1319415076]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 56.0
theme_override_fonts/normal_font = ExtResource("2_ajmke")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "todo"
vertical_alignment = 1

[node name="label_edit" type="LineEdit" parent="." unique_id=556053994]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 448.0
offset_bottom = 104.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("2_ajmke")
theme_override_font_sizes/font_size = 32
flat = true

[node name="complete" type="ColorRect" parent="." unique_id=2046965153]
layout_mode = 0
offset_left = 248.0
offset_top = 8.0
offset_right = 280.0
offset_bottom = 56.0
color = Color(1, 1, 1, 0.2509804)

[node name="button" type="Button" parent="complete" unique_id=99757126]
layout_mode = 0
offset_right = 32.0
offset_bottom = 48.0
flat = true

[node name="icon" type="Label" parent="complete" unique_id=1516702226]
layout_mode = 0
offset_right = 32.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 30
text = "✓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="move_up" type="ColorRect" parent="." unique_id=1227448564]
layout_mode = 0
offset_left = 232.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 32.0
color = Color(1, 1, 1, 0.2509804)

[node name="button" type="Button" parent="move_up" unique_id=1062391644]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
flat = true

[node name="icon" type="Label" parent="move_up" unique_id=488990844]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 15
text = "↑"
horizontal_alignment = 1
vertical_alignment = 1

[node name="move_down" type="ColorRect" parent="." unique_id=1076899697]
layout_mode = 0
offset_left = 232.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 56.0
color = Color(1, 1, 1, 0.2509804)

[node name="button" type="Button" parent="move_down" unique_id=1860110278]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
flat = true

[node name="icon" type="Label" parent="move_down" unique_id=1426549608]
layout_mode = 0
offset_right = 16.0
offset_bottom = 24.0
theme_override_font_sizes/font_size = 15
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="editing_toggled" from="label_edit" to="." method="switch_display"]
[connection signal="button_down" from="complete/button" to="." method="complete_error"]
[connection signal="button_down" from="move_up/button" to="." method="move_error" binds= [-1]]
[connection signal="button_down" from="move_down/button" to="." method="move_error" binds= [1]]
